---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2025-05-14
  Changes:
    - New dependency on the mod Quality Cursor.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2025-05-14
  Bugfixes:
    - Fixed that the 10% buff to crafting machine speeds was applied incorrectly.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2025-05-14
  Changes:
    - Broken-quality items are now level -3, improving mod compatibility.
    - Disabled the generation of meltdown recipes when pymodpack is installed.
  Info:
    - These changes mean the mod at least _boots_ with Py installed.
---------------------------------------------------------------------------------------------------
Version: 1.2.0-1.2.1
Date: 2025-05-12
  Changes:
    - Space Age is no longer a mandatory dependency!
  Changes:
    - The crafting time of meltdown recipes has been doubled so that the animation oscillates less.
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2025-05-12
  Bugfixes:
    - Contains a reaction to an apparent recent engine change in order to keep Quality module 1 at -3% degradation, etc.
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2025-05-11
  Changes:
    - Beta tag added to title.
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2025-05-09
  Changes:
    - Reduced the sound volume of the downgrade port.
---------------------------------------------------------------------------------------------------
Version: 1.1.4