@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Corrected quality effects of inventory size bonus for armor and cargo bays, and duration for stickers.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: 2025-05-14
